outputs/tsp_constructive-constructive/ab-mcts-ahd/2025-09-27_14-35-36/evaluations/problem_eval-2812106316965113_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance of long-term efficiency and immediate proximity, ensuring efficient path selection with a dynamic margin for returning to the destination.}
                                                                                                                                                         ^
SyntaxError: unmatched '}'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance of long-term efficiency and immediate proximity, ensuring efficient path selection with a dynamic margin for returning to the destination.}
                                                                                                                                                         ^
SyntaxError: unmatched '}'
